--- a/style.css
+++ b/style.css
@@ -24,3 +24,24 @@ html,body{width: 1622px;}
 
 #banner #banner_workEnvi{width: 100%}
 #banner #banner_workEnvi ul li{display: inline-block;}
+
+/*course样式*/
+#course{width: 1205px; margin: 80px auto; position: relative;}
+/*course主栏*/
+#course #main{width: 965px; position: relative; float: left; margin-right: 20px;}
+#course #main #tab div{display: inline-block;width:200px; height: 50px; font: 20px/50px Microsoft Yahei;box-shadow: 1px 2px 1px #D4D3D3; background-color: #39A030; text-align: center; float: left;}
+#course #main #tab:after{content: '.';display: block;clear: both;visibility: hidden;height: 0;overflow: none;}
+/*翻页样式*/
+#course #main #pageNo{display: inline-block;position:absolute; right: 0; bottom: 0;}
+#course #main #pageNo ul li{display: inline-block; margin: 10px; font: 14px Microsoft Yahei;}
+#course #main #pageNo ul li.direct,#course #main #pageNo ul li.clicked{ background-color: rgba(57,160,48,0.5); color: rgba(255,255,255,0.8); height: 20px;width: 30px;text-align: center;}
+#course #main #pageNo ul li.clicked{width: 20px;}
+
+/*course侧栏*/
+#course #side{width: 220px; overflow: hidden;}
+#course #side #side_jigouIntro{height: 230px;border: 1px solid #D4D3D3; border-top: none; margin-bottom: 20px;}
+#course #side span{display:block; border-bottom: 1px solid #D4D3D3;  font: 16px/55px Microsoft Yahei; height: 55px; padding-left: 22px; color: #333;}
+#course #side #side_jigouIntro #side_jigouIntro_video{padding-left: 22px;}
+#course #side #side_jigouIntro #side_jigouIntro_video p{margin: 21px 0 9px; font-size: 14px; color:#666; }
+
+#course #side #side_hotlist{height: 780px;border: 1px solid #D4D3D3; border-top: none;}
