add mask and popup style

--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
 html,body{width: 1622px;}
+/*遮罩*/
+.mask{display:none;position: fixed;top: 0;bottom: 0;height: 100%;width: 100%;z-index: 999; background-color: rgba(0,0,0,0.5)}
+
+#up_video{ display: none; width: 890px; height: 675px; padding: 30px 30px 40px;transform:translate(-50%,-50%); position: fixed; z-index: 2000; background-color: white; font: 18px Microsoft Yahei;}
+#up_video p{margin-bottom: 20px;}
+#up_video .close_button{position: absolute; top: 10px; right: 10px;}
+
+#login_box{ display: none;position:fixed; transform:translate(-50%,-50%); top:50%; left:50%; z-index: 2000; width: 297px;height: 218px; background-color: white; padding: 30px 50px 40px 40px; font: 18px Microsoft Yahei;}
+#login_box #login_form input{display: block;font: 16px Microsoft Yahei; text-indent: 0.5em; width: 295px; height: 45px; margin-top:20px; box-sizing:border-box; border:1px solid #DFDFDF; box-shadow: -1px -1px 2px #F1F1F1 inset; }
+#login_box #login_form button{display: block; border: 1px solid #2AB050; box-shadow: 1px 1px #D5E3DA; width: 295px; height: 45px; margin-top: 30px; font: 16px Microsoft Yahei; color: #fff; text-align: center; background: linear-gradient(#24AC47,#13912B)}
+
 /*顶部不再提醒样式*/
 #noMoreReminder{font: 12px/35px Microsoft Yahei;background-color: #f3f3f3; width: 100%; }
 #noMoreReminder #noMoreReminder_content{width: 1205px;position: relative; margin: 0 auto;}
