--- a/style.css
+++ b/style.css
@@ -52,8 +52,17 @@ html,body{width: 100%;}
 #course #main{width: 965px; position: relative; float: left; margin-right: 20px;}
 #course #main #tab div{display: inline-block;width:200px; height: 50px; font: 20px/50px Microsoft Yahei;box-shadow: 1px 2px 1px #D4D3D3; background-color: #39A030; text-align: center; float: left;}
 #course #main #tab:after{content: '.';display: block;clear: both;visibility: hidden;height: 0;overflow: none;}
+#course #main #courseList ul{position: relative;top: 30px;}
+#course #main #courseList .main_course{width: 25%;box-sizing:border-box;border: 1px solid #f1f1f1; padding:1px; float: left;}
+#course #main #courseList .main_course .main_course_pic{width: 100%;}
+#course #main #courseList .main_course p{margin-top: 10px;margin-left: 2px;}
+#course #main #courseList .main_course .course_intro{font: 12px Microsoft Yahei; overflow: hidden;white-space: nowrap;text-overflow:ellipsis;}
+#course #main #courseList .main_course .course_teacher{color: #999;}
+#course #main #courseList .main_course .course_follower{background: url(images/usericon.png) no-repeat 1px; padding-left: 16px; border: 1px solid #f1f1f1; display: inline-block; border-radius: 2px;color: #999;vertical-align: middle;text-align: center;}
+#course #main #courseList .main_course .course_price{color: #FF3F00; margin-bottom: 12px;}
+
 /*翻页样式*/
-#course #main #pageNo{display: inline-block;position:absolute; right: 0; bottom: 0;}
+#course #main #pageNo{display: inline-block;position:absolute; right: 0; bottom: -90px;}
 #course #main #pageNo ul li{display: inline-block; margin: 10px; font: 14px Microsoft Yahei;}
 #course #main #pageNo ul li.direct,#course #main #pageNo ul li.clicked{ background-color: rgb(57,160,48); opacity:0.5;color:rgb(255,255,255); height: 20px;width: 30px;text-align: center;}
 #course #main #pageNo ul li.clicked{width: 20px;}
@@ -64,6 +73,10 @@ html,body{width: 100%;}
 #course #side span{display:block; border-bottom: 1px solid #D4D3D3;  font: 16px/55px Microsoft Yahei; height: 55px; padding-left: 22px; color: #333;}
 #course #side #side_jigouIntro #side_jigouIntro_video{padding-left: 22px;}
 #course #side #side_jigouIntro #side_jigouIntro_video p{margin: 21px 0 9px; font-size: 14px; color:#666; }
+#course #side #side_courses ul li{margin:20px;}
+#course #side #side_courses .side_course{width: 50px; height: 50px; float: left;}
+#course #side #side_courses .side_course_title{margin-left: 60px;font: 14px Microsoft Yahei; margin-bottom: 10px;overflow: hidden;white-space: nowrap;text-overflow:ellipsis;}
+#course #side #side_courses p:last-child{margin-left: 60px;font-size: 12px; color: #999;background: url(images/usericon.png) no-repeat 1px; padding-left: 16px;}
 
 #course #side #side_hotlist{height: 780px;border: 1px solid #D4D3D3; border-top: none;}
 
