--- a/style.css
+++ b/style.css
@@ -50,10 +50,11 @@ html,body{width: 100%;}
 #course{width: 1205px; margin: 80px auto; position: relative;}
 /*course主栏*/
 #course #main{width: 965px; position: relative; float: left; margin-right: 20px;}
-#course #main #tab div{display: inline-block;width:200px; height: 50px; font: 20px/50px Microsoft Yahei;box-shadow: 1px 2px 1px #D4D3D3; background-color: #39A030; text-align: center; float: left;}
+#course #main #tab div{color:white;display: inline-block;width:200px; height: 50px; font: 20px/50px Microsoft Yahei;box-shadow: 1px 3px 2px #D4D3D3; background-color: #39A030; text-align: center; float: left;}
+
 #course #main #tab:after{content: '.';display: block;clear: both;visibility: hidden;height: 0;overflow: none;}
 #course #main #courseList ul{position: relative;top: 30px;}
-#course #main #courseList .main_course{width: 25%;box-sizing:border-box;border: 1px solid #f1f1f1; padding:1px; float: left;}
+#course #main #courseList .main_course{width: 24%; margin-right: 0.8%; margin-bottom: 10px;box-sizing:border-box;border: 1px solid #f1f1f1; padding:1px; float: left; box-shadow: 0px 1px 4px #cecece;}
 #course #main #courseList .main_course .main_course_pic{width: 100%;}
 #course #main #courseList .main_course p{margin-top: 10px;margin-left: 2px;}
 #course #main #courseList .main_course .course_intro{font: 12px Microsoft Yahei; overflow: hidden;white-space: nowrap;text-overflow:ellipsis;}
