--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ html,body{width: 100%;}
 
 /*course侧栏*/
 #course #side{width: 220px; overflow: hidden;}
-#course #side #side_jigouIntro{height: 230px;border: 1px solid #D4D3D3; border-top: none; margin-bottom: 20px;}
+#course #side #side_jigouIntro{height: 230px;border: 1px solid #D4D3D3; box-shadow: 1px 2px 2px #cecece; border-top: none; margin-bottom: 20px;}
 #course #side span{display:block; border-bottom: 1px solid #D4D3D3;  font: 16px/55px Microsoft Yahei; height: 55px; padding-left: 22px; color: #333;}
 #course #side #side_jigouIntro #side_jigouIntro_video{padding-left: 22px;}
 #course #side #side_jigouIntro #side_jigouIntro_video p{margin: 21px 0 9px; font-size: 14px; color:#666; }
@@ -79,7 +79,7 @@ html,body{width: 100%;}
 #course #side #side_courses .side_course_title{margin-left: 60px;font: 14px Microsoft Yahei; margin-bottom: 10px;overflow: hidden;white-space: nowrap;text-overflow:ellipsis;}
 #course #side #side_courses p:last-child{margin-left: 60px;font-size: 12px; color: #999;background: url(images/usericon.png) no-repeat 1px; padding-left: 16px;}
 
-#course #side #side_hotlist{height: 780px;border: 1px solid #D4D3D3; border-top: none;}
+#course #side #side_hotlist{height: 780px;border: 1px solid #D4D3D3; border-top: none;  box-shadow: 1px 2px 2px #cecece; margin-bottom: 5px;}
 
 /*footer*/
 #footer{width: 100%; height: 262px;background-color: #2C3339; color: #999; font: 14.58px Microsoft Yahei; position: relative; bottom: 0;}
