--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html,body{width: 100%;}
 /*遮罩*/
 .mask{display:none;position: fixed;top: 0;bottom: 0;height: 100%;width: 100%;z-index: 999; background-color: rgba(0,0,0,0.5)}
-
+.clearfix:after{content:'.';display: block;clear: both;visibility: hidden;height: 0;overflow: none; }
 #up_video{ display: none; width: 890px; height: 675px; padding: 30px 30px 40px;transform:translate(-50%,-50%); position: fixed; z-index: 2000; background-color: white; font: 18px Microsoft Yahei;}
 #up_video p{margin-bottom: 20px;}
 #up_video .close_button{position: absolute; top: 10px; right: 10px;}
@@ -26,6 +26,7 @@ html,body{width: 100%;}
 #banner #banner_nav .guanzhu{display: inline-block; margin: auto 30px; font:12px/21px Simsun; color: white; width: 54px; height: 21px; background-color: #21A557; text-align: center;}
 #banner #banner_nav .threeproduct{display: inline-block; position: absolute;right: 0;}
 #banner #banner_nav .threeproduct ul li{display: inline-block; font: 16px Microsoft Yahei; margin-left: 55px;}
+#banner #banner_nav .threeproduct ul li:hover{color: #39a030;}
 
 #banner #banner_pic{position: relative;z-index: 1; height: 400px;}
 #banner #banner_pic .bannerpic li{position: absolute; z-index: -9999;}
@@ -41,6 +42,7 @@ html,body{width: 100%;}
 #banner #banner_threeproducts ul li div{width: 250px; font: 14px/1.14 Microsoft Yahei; margin-left:100px }
 #banner #banner_threeproducts ul li div p:first-child{font-size: 22px; margin-bottom:20px; }
 #banner #banner_threeproducts ul li div p:last-child{color:#39A030; margin-top: 33px;}
+#banner #banner_threeproducts ul li div p:last-child:hover{text-decoration: underline;}
 
 #banner #banner_workEnvi{width: 100%; overflow: hidden;}
 #banner #banner_workEnvi ul li{display: inline-block;width:19.62%;}
@@ -57,6 +59,7 @@ html,body{width: 100%;}
 #course #main #courseList .main_course{width: 24%; margin-right: 0.8%; margin-bottom: 10px;box-sizing:border-box;border: 1px solid #f1f1f1; padding:1px; float: left; box-shadow: 0px 1px 4px #cecece;}
 #course #main #courseList .main_course .main_course_pic{width: 100%;}
 #course #main #courseList .main_course p{margin-top: 10px;margin-left: 2px;}
+#course #main #courseList .main_course:hover{color: #39a030;box-shadow: 0px 1px 4px black;}
 #course #main #courseList .main_course .course_intro{font: 12px Microsoft Yahei; overflow: hidden;white-space: nowrap;text-overflow:ellipsis;}
 #course #main #courseList .main_course .course_teacher{color: #999;}
 #course #main #courseList .main_course .course_follower{background: url(images/usericon.png) no-repeat 1px; padding-left: 16px; border: 1px solid #f1f1f1; display: inline-block; border-radius: 2px;color: #999;vertical-align: middle;text-align: center;}
@@ -64,9 +67,11 @@ html,body{width: 100%;}
 
 /*翻页样式*/
 #course #main #pageNo{display: inline-block;position:absolute; right: 0; bottom: -90px;}
-#course #main #pageNo ul li{display: inline-block; margin: 10px; font: 14px Microsoft Yahei;}
-#course #main #pageNo ul li.direct,#course #main #pageNo ul li.clicked{ background-color: rgb(57,160,48); opacity:0.5;color:rgb(255,255,255); height: 20px;width: 30px;text-align: center;}
-#course #main #pageNo ul li.clicked{width: 20px;}
+#course #main #pageNo ul li{display: inline-block;  font: 14px Microsoft Yahei; width: 20px;}
+#course #main #pageNo ul li.direct{ background-color: rgb(57,160,48); margin: 10px;opacity:0.5;color:rgb(255,255,255); height: 20px;width: 30px;text-align: center;}
+#course #main #pageNo ul li:hover{ background-color: rgb(57,160,48);opacity:0.5;color:rgb(255,255,255); text-align: center;}
+#course #main #pageNo ul li:active{color: #39a030; background-color: white; opacity: 1;}
+#course #main #pageNo ul .currentpage{color: #39a030;}
 
 /*course侧栏*/
 #course #side{width: 220px; overflow: hidden;}
@@ -79,16 +84,17 @@ html,body{width: 100%;}
 #course #side #side_courses .side_course_title{margin-left: 60px;font: 14px Microsoft Yahei; margin-bottom: 10px;overflow: hidden;white-space: nowrap;text-overflow:ellipsis;}
 #course #side #side_courses p:last-child{margin-left: 60px;font-size: 12px; color: #999;background: url(images/usericon.png) no-repeat 1px; padding-left: 16px;}
 
-#course #side #side_hotlist{height: 780px;border: 1px solid #D4D3D3; border-top: none;  box-shadow: 1px 2px 2px #cecece; margin-bottom: 5px;}
+#course #side #side_hotlist{height: 720px;border: 1px solid #D4D3D3; border-top: none;  box-shadow: 1px 2px 2px #cecece; margin-bottom: 5px;}
 
 /*footer*/
-#footer{width: 100%; height: 262px;background-color: #2C3339; color: #999; font: 14.58px Microsoft Yahei; position: relative; bottom: 0;}
-#footer #footer_content{width: 1205px; margin: 0 auto; padding:80px 0 80px 50px; height: 100px;}
+#footer{margin-top:200px;width: 100%;background-color: #2C3339; color: #999; font: 14.58px Microsoft Yahei; position: relative; bottom: 0;}
+#footer #footer_content{background-color: #2C3339; color: #999; font: 14.58px Microsoft Yahei;width: 1205px; margin: 0 auto; padding:80px 0 80px 50px; height: 100px;}
+#footer #footer_content>div{display: inline-block;}
 #footer #footer_content_right ul li {display: inline-block; vertical-align: top; height: 100px; margin: 0 0 0 100px;}
 #footer #footer_content_right ul li p:first-child{margin-top: 0; font-size: 12.5px;}
 #footer #footer_content_right ul li a {color: #999;}
 #footer #footer_content_left{float: left;}
 #footer #footer_content_left p{color: #39A030; margin-bottom: 15px;}
 #footer #footer_content_right li p{margin-top: 10px;}
-
+#footer #footer_content_right li p a:hover{text-decoration: underline;}
 #footer #footer_content_left li{margin-top: 15px;}
