--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 
 #banner #banner_nav .threeproduct{display: inline-block; position: absolute;right: 0;}
 #banner #banner_nav .threeproduct ul li{display: inline-block; font: 16px Microsoft Yahei; margin-left: 55px;}
-#banner #banner_nav .threeproduct ul li:hover{color: #39a030;}
+#banner #banner_nav .threeproduct ul li a:hover{color: #39a030;}
 
 #banner #banner_pic{position: relative;z-index: 1; height: 430px;}
 #banner #banner_pic .bannerpic li{position: absolute; z-index: -9999;}
@@ -46,8 +46,9 @@
 #banner #banner_threeproducts ul li img{position: absolute;top: 0;}
 #banner #banner_threeproducts ul li div{width: 250px; font: 14px/1.14 Microsoft Yahei; margin-left:100px }
 #banner #banner_threeproducts ul li div p:first-child{font-size: 22px; margin-bottom:20px; }
-#banner #banner_threeproducts ul li div p:last-child{color:#39A030; margin-top: 33px;}
-#banner #banner_threeproducts ul li div p:last-child:hover{text-decoration: underline;}
+#banner #banner_threeproducts ul li div p:last-child {color:#39A030; margin-top: 33px;}
+#banner #banner_threeproducts ul li div p:last-child a{color: #39a030;}
+#banner_threeproducts ul li div p:last-child a:hover{text-decoration: underline;}
 
 #banner #banner_workEnvi{width: 100%; overflow: hidden;}
 #banner #banner_workEnvi ul li{display: inline-block;width:19.62%;}
@@ -57,7 +58,8 @@
 #course{width: 1205px; margin: 80px auto; position: relative;}
 /*course主栏*/
 #course #main{width: 965px; position: relative; float: left; margin-right: 20px;}
-#course #main #tab div{color:white;display: inline-block;width:200px; height: 50px; font: 20px/50px Microsoft Yahei;box-shadow: 1px 3px 2px #D4D3D3; background-color: #39A030; text-align: center; float: left;}
+#course #main #tab .main_course_tab_checked {margin-right: 5px; cursor: pointer; color:white;display: inline-block;width:200px; height: 50px; font: 20px/50px Microsoft Yahei;box-shadow: 1px 3px 2px #D4D3D3; background-color: #39A030; text-align: center; float: left;}
+#course #main #tab .main_course_tab{margin-right: 5px; cursor: pointer; color:black;display: inline-block;width:200px; height: 50px; font: 20px/50px Microsoft Yahei;box-shadow: 1px 3px 2px #D4D3D3; background-color: white; text-align: center; float: left;}
 
 #course #main #tab:after{content: '.';display: block;clear: both;visibility: hidden;height: 0;overflow: none;}
 #course #main #courseList ul{position: relative;top: 30px;}
