--- a/style.css
+++ b/style.css
@@ -63,20 +63,22 @@
 #course #main #tab .main_course_tab_checked {margin-right: 5px; cursor: pointer; color:white;display: inline-block;width:200px; height: 50px; font: 20px/50px Microsoft Yahei;box-shadow: 1px 3px 2px #D4D3D3; background-color: #39A030; text-align: center; float: left;}
 #course #main #tab .main_course_tab{margin-right: 5px; cursor: pointer; color:black;display: inline-block;width:200px; height: 50px; font: 20px/50px Microsoft Yahei;box-shadow: 1px 3px 2px #D4D3D3; background-color: white; text-align: center; float: left;}
 
-#course #main #tab:after{content: '.';display: block;clear: both;visibility: hidden;height: 0;overflow: none;}
+#course #main #tab:after{content: '.';display: block;clear: both;visibility: hidden;height: 0;overflow: hidden;}
 #course #main #courseList ul{position: relative;top: 30px;}
-#course #main #courseList .main_course{overflow: hidden; width: 23%; margin-right: 2%; margin-bottom: 15px;box-sizing:border-box;border: 1px solid #f1f1f1; padding:1px; float: left; box-shadow: 0px 1px 4px #cecece;}
-#course #main #courseList .main_course:after{content:'.';display: block;clear: both;visibility: hidden;height: 0;overflow: none; }
-#course #main #courseList .main_course_hover:after{content:'.';display: block;clear: both;visibility: hidden;height: 0;overflow: none; }
-#course #main #courseList .main_course .main_course_pic{width: 219px; height: 122px;}
+#course #main #courseList .main_course{position: relative; float: left;  width: 23%; margin-right: 2%;height: 234px; margin-bottom: 20px;box-sizing:border-box;border: 1px solid #f1f1f1; padding:1px; display: inline-block; box-shadow: 0px 1px 4px #cecece;}
+#course #main #courseList .main_course:after{content:'.';display: block;clear: both;visibility: hidden;height: 0;overflow: hidden; }
+#course #main #courseList .main_course_hover:after{content:'.';display: block;clear: both;visibility: hidden;height: 0;overflow: hidden; }
+#course #main #courseList .main_course .main_course_pic,#course #main #courseList .main_course:hover .main_course_pic{width: 219px; height: 122px;}
 #course #main #courseList .main_course p{margin-top: 10px;margin-left: 2px;}
 #course #main #courseList .main_course:hover{color: #39a030;box-shadow: 0px 1px 4px black;}
-#course #main #courseList .main_course_hover{overflow: hidden;height: 234px; margin-right: 2%; width: 48%;box-sizing:border-box;border: 1px solid #f1f1f1; padding:1px; z-index: 10000; float: left; box-shadow: 0px 1px 4px #cecece;}
+
+#course #main #courseList .main_course_hover{position: relative; float: left;overflow: hidden;height: 234px;margin-bottom: 20px; margin-right: 2%; width: 48%;box-sizing:border-box;border: 1px solid #f1f1f1; padding:1px; box-shadow: 0px 1px 4px #cecece;}
 #course #main #courseList .main_course_hover+li{display: none;overflow: hidden; }
 #course #main #courseList .main_course .course_intro{overflow:hidden;font: 12px Microsoft Yahei; overflow: hidden;white-space: nowrap;text-overflow:ellipsis;}
 #course #main #courseList .main_course .course_teacher{color: #999;}
 #course #main #courseList .main_course .course_follower{background: url(images/usericon.png) no-repeat 1px; padding-left: 16px; border: 1px solid #f1f1f1; display: inline-block; border-radius: 2px;color: #999;vertical-align: middle;text-align: center;}
 #course #main #courseList .main_course .course_price{color: #FF3F00; margin-bottom: 12px;}
+/*#course #main #courseList li.main_course:nth-child(3){width:48% }*/
 
 /*翻页样式*/
 #course #main #pageNo{display: inline-block;position:absolute; right: 0; bottom: -90px;}
