--- a/style.css
+++ b/style.css
@@ -37,9 +37,8 @@
 #banner #banner_nav .threeproduct ul li a:hover{color: #39a030;}
 
 /*轮播图*/
-#banner #banner_pic{ position: relative;height: 418px; width: 100%; overflow: hidden; margin-bottom: 60px;}
-#banner #banner_pic .bannerpic{position: absolute;}
-#banner #banner_pic .bannerpic li{width:20%;float: left; }
+#banner #banner_pic{ position: relative;width: 100%; margin-bottom: 60px;}
+#banner #banner_pic .bannerpic li{position:absolute; width:100%;}
 #banner #banner_pic ul li img{width: 100%;}
 #banner #banner_pic .quanquan{position: absolute;bottom: 40px;z-index: 10000;  left: 50%; width: 84px; margin-left: -42px;}
 #banner #banner_pic .quanquan li{width:12px; height:12px;margin-right: 12px;cursor: pointer; display: inline-block;background-color: white; z-index: 2; border-radius: 50%;}
