--- a/style.css
+++ b/style.css
@@ -39,7 +39,8 @@
 /*轮播图*/
 #banner #banner_pic{ position: relative;width: 100%; margin-bottom: 60px;}
 #banner #banner_pic .bannerpic li{position:absolute; width:100%;}
-#banner #banner_pic ul li img{width: 100%;}
+#banner #banner_pic ul li img{ width: 100%;}
+#banner #banner_pic .bannerpic li:first-of-type{z-index: 1;}
 #banner #banner_pic .quanquan{position: absolute;bottom: 40px;z-index: 10000;  left: 50%; width: 84px; margin-left: -42px;}
 #banner #banner_pic .quanquan li{width:12px; height:12px;margin-right: 12px;cursor: pointer; display: inline-block;background-color: white; z-index: 2; border-radius: 50%;}
 
