--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/html,body{width: 100%;}
+/html,body{width: 100%; min-width: 850px;}
 /*遮罩*/
 .mask{display:none;position: fixed;top: 0;bottom: 0;height: 100%;width: 100%;z-index: 999; background-color: rgba(0,0,0,0.5)}
 .clearfix:after{content:'.';display: block;clear: both;visibility: hidden;height: 0;overflow: none; }
@@ -76,19 +76,34 @@
 /*课程列表样式*/
 #course #main #tab:after{content: '.';display: block;clear: both;visibility: hidden;height: 0;overflow: hidden;}
 #course #main #courseList ul{position: relative;top: 30px;}
-#course #main #courseList .main_course{display: inline-block; position: relative; float: left;  width: 23%; margin-right: 2%;height: 234px; margin-bottom: 20px;box-sizing:border-box;border: 1px solid #f1f1f1; padding:1px; display: inline-block; }
-#course #main #courseList .main_course:after{content:'.';display: block;clear: both;visibility: hidden;height: 0;overflow: hidden; }
-#course #main #courseList .main_course_hover:after{content:'.';display: block;clear: both;visibility: hidden;height: 0;overflow: hidden; }
-#course #main #courseList .main_course .main_course_pic,#course #main #courseList .main_course:hover .main_course_pic{width: 219px; height: 122px;}
-#course #main #courseList .main_course p{margin-top: 10px;margin-left: 2px;}
-#course #main #courseList .main_course_hover{display:inline-block; position: relative; float: left;overflow: hidden;height: 234px;margin-bottom: 20px; margin-right: 2%; width: 48%;box-sizing:border-box;border: 1px solid #f1f1f1; padding:1px; box-shadow: 0px 1px 4px #cecece;}
-#course #main #courseList .main_course_hover+li{display: none;overflow: hidden; }
-#course #main #courseList .main_course .course_intro{overflow:hidden;font: 12px Microsoft Yahei; overflow: hidden;white-space: nowrap;text-overflow:ellipsis;}
-#course #main #courseList .main_course .course_teacher{color: #999;}
-#course #main #courseList .main_course .course_follower{background: url(images/usericon.png) no-repeat 1px; padding-left: 16px; border: 1px solid #f1f1f1; display: inline-block; border-radius: 2px;color: #999;vertical-align: middle;text-align: center;}
-#course #main #courseList .main_course .course_price{color: #FF3F00; margin-bottom: 12px;}
-/*#course #main #courseList li.main_course:nth-child(3){width:48% }*/
-
+@media screen and (min-width:1205px) {
+	#course #main #courseList .main_course{display: inline-block; position: relative; float: left;  width: 23%; margin-right: 2%;height: 234px; margin-bottom: 20px;box-sizing:border-box;border: 1px solid #f1f1f1; padding:1px; display: inline-block; }
+	#course #main #courseList .main_course:after{content:'.';display: block;clear: both;visibility: hidden;height: 0;overflow: hidden; }
+	#course #main #courseList .main_course_hover:after{content:'.';display: block;clear: both;visibility: hidden;height: 0;overflow: hidden; }
+	#course #main #courseList .main_course .main_course_pic,#course #main #courseList .main_course:hover .main_course_pic{width: 219px; height: 122px;}
+	#course #main #courseList .main_course p{margin-top: 10px;margin-left: 2px;}
+	#course #main #courseList .main_course_hover{display:inline-block; position: relative; float: left;overflow: hidden;height: 234px;margin-bottom: 20px; margin-right: 2%; width: 48%;box-sizing:border-box;border: 1px solid #f1f1f1; padding:1px; box-shadow: 0px 1px 4px #cecece;}
+	#course #main #courseList .main_course_hover+li{display: none;overflow: hidden; }
+	#course #main #courseList .main_course .course_intro{overflow:hidden;font: 12px Microsoft Yahei; overflow: hidden;white-space: nowrap;text-overflow:ellipsis;}
+	#course #main #courseList .main_course .course_teacher{color: #999;}
+	#course #main #courseList .main_course .course_follower{background: url(images/usericon.png) no-repeat 1px; padding-left: 16px; border: 1px solid #f1f1f1; display: inline-block; border-radius: 2px;color: #999;vertical-align: middle;text-align: center;}
+	#course #main #courseList .main_course .course_price{color: #FF3F00; margin-bottom: 12px;}
+}
+@media screen and (max-width:1205px) {
+	#course{width: 90%; margin: 80px auto; position: relative; min-width: 800px;}
+	#course #main{ width: 70%; position: relative; float: left; }
+	#course #main #courseList .main_course{display: inline-block; position: relative; float: left;  width: 31%; margin-right: 2%;height: 234px; margin-bottom: 20px;box-sizing:border-box;border: 1px solid #f1f1f1; padding:1px; display: inline-block; }
+	#course #main #courseList .main_course:after{content:'.';display: block;clear: both;visibility: hidden;height: 0;overflow: hidden; }
+	#course #main #courseList .main_course_hover:after{content:'.';display: block;clear: both;visibility: hidden;height: 0;overflow: hidden; }
+	#course #main #courseList .main_course .main_course_pic,#course #main #courseList .main_course:hover .main_course_pic{width: 100%; height: 122px;}
+	#course #main #courseList .main_course p{margin-top: 10px;margin-left: 2px;}
+	#course #main #courseList .main_course_hover{display:inline-block; position: relative; float: left;overflow: hidden;height: 234px;margin-bottom: 20px; margin-right: 2%; width: 64%;box-sizing:border-box;border: 1px solid #f1f1f1; padding:1px; box-shadow: 0px 1px 4px #cecece;}
+	#course #main #courseList .main_course_hover+li{display: none;overflow: hidden; }
+	#course #main #courseList .main_course .course_intro{overflow:hidden;font: 12px Microsoft Yahei; overflow: hidden;white-space: nowrap;text-overflow:ellipsis;}
+	#course #main #courseList .main_course .course_teacher{color: #999;}
+	#course #main #courseList .main_course .course_follower{background: url(images/usericon.png) no-repeat 1px; padding-left: 16px; border: 1px solid #f1f1f1; display: inline-block; border-radius: 2px;color: #999;vertical-align: middle;text-align: center;}
+	#course #main #courseList .main_course .course_price{color: #FF3F00; margin-bottom: 12px;}
+}
 /*翻页样式*/
 #course #main #pageNo{display: inline-block;position:absolute; right: 0; bottom: -90px;}
 #course #main #pageNo ul li{cursor: pointer; display: inline-block;  font: 14px Microsoft Yahei; width: 20px; text-align: center;}
